--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,44 +12,54 @@
 <body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)" alt="Image of brick dungeon wall">
   <div class="wrapper fade-in">
     <%- include('./partials/header.ejs') %>
-    <img src="https://i.imgur.com/ws1MM24.png" style="max-height:60vmin;" alt="Image of text logo Encounterly and a small round creatures with tentacles and one giant eye">
+      <img src="https://i.imgur.com/ws1MM24.png" style="max-height:50vmin;"
+        alt="Image of text logo Encounterly and a small round creatures with tentacles and one giant eye">
       <main>
         <div class="overlay-div">
           <div class="side">
             <div class="inner-container">
-            <img src="https://i.imgur.com/t0VK63X.png" alt="" width="300" height="300" alt="Image of a mage, a knight and fighters battling a dragon destroying a town">
-            <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Euismod et habitant ex fames purus proin dui elit.
-              Curabitur posuere aptent accumsan ad a suscipit maximus tempus. Mi nam scelerisque eleifend hac molestie
-              nam adipiscing. Egestas molestie egestas scelerisque; eleifend ipsum vulputate quam. Feugiat consequat
-              donec in sociosqu est pulvinar risus. Volutpat a sit; vulputate magnis platea mus pretium sapien.</p>
+              <img src="https://i.imgur.com/t0VK63X.png" alt="" width="300" height="300"
+                alt="Image of a mage, a knight and fighters battling a dragon destroying a town">
+              <p>Are you ready to level up your game? Encounterly is here to make your life as a Dungeon Master easier,
+                faster, and more fun. Whether you're running epic campaigns or just diving into a quick one-shot,
+                Encounterly gives you the tools you need to create unforgettable encounters with ease.</p>
             </div>
-              <div class="inner-container">
-                <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Euismod et habitant ex fames purus proin dui elit.
-                  Curabitur posuere aptent accumsan ad a suscipit maximus tempus. Mi nam scelerisque eleifend hac molestie
-                  nam adipiscing. Egestas molestie egestas scelerisque; eleifend ipsum vulputate quam. Feugiat consequat
-                  donec in sociosqu est pulvinar risus. Volutpat a sit; vulputate magnis platea mus pretium sapien.</p>
-                <img src="https://i.imgur.com/t0VK63X.png" alt="" width="300" height="300" alt="Image of a mage, a knight and fighters battling a dragon destroying a town">
-              </div>
+            <div class="inner-container">
+              <h3>What Can Encounterly Do for You?</h3><br>
+              <p><span style="font-weight: 800;">Effortless Encounter Planning</span><br>
+                Quickly gauge encounter difficulty with our intuitive planner, ensuring every battle feels just right
+                for your players.<br>
+                <br>
+                <span style="font-weight: 800;">Monster Management Made Easy</span><br>
+                Save, sort, and customize your go-to monsters. Your personal bestiary is now just a click away.<br>
+                <br>
+                <span style="font-weight: 800;">Party Insights at a Glance</span><br>
+                Keep track of your players stats, levels, and abilities across all your campaigns. Know your party
+                inside out and build encounters tailored to their strengths (and weaknesses!).<br>
+              </p>
+              <img src="https://i.imgur.com/9bzgPSb.jpg" style="max-width:40vmin; max-height:40vmin;" 
+                alt="A humanoid with green skin and a tusk like overbite leans against a brick wall in his plate armor">
+            </div>
           </div>
           <div class="blank">
             <h1>Ready for effortless encounters?</h1>
-            <a href="/auth/sign-up">Try it for free!</a>
+            <a href="/auth/sign-up" class="button-wrapper">Try it for free!</a>
           </div>
           <div class="nested-container">
             <h1>Testimonials</h1>
             <div class="inner-container">
-              <div class="row-item">1</div>
-              <div class="row-item">2</div>
-              <div class="row-item">3</div>
+              <div class="row-item testimonial">Wow, you did math!</div>
+              <div class="row-item testimonial">I'll probably come back to check it out when you're done.</div>
+              <div class="row-item testimonial">Does this mean you'll run a game of D&D for me?</div>
             </div>
           </div>
           <div class="nested-container">
             <h1>Upcoming Features</h1>
             <ul>
               <div class="inner-container">
-                <li class="row-item-nobg">Feature 1</li>
-                <li class="row-item-nobg">Feature 2</li>
-                <li class="row-item-nobg">Feature 3</li>
+                <li class="row-item-nobg">More math!</li>
+                <li class="row-item-nobg">Pagination!</li>
+                <li class="row-item-nobg">~* Filters *~</li>
               </div>
             </ul>
           </div>
@@ -72,7 +82,5 @@
       </main>
       <%- include('./partials/footer.ejs') %>
   </div>
-
 </body>
-
 </html>
