--- a/views/partials/monsters.ejs
+++ b/views/partials/monsters.ejs
@@ -1,3 +1,5 @@
 <div id="monsters">
-    List of monsters
+    <h1>See your Monsters</h1>
+    <a href="/monsters/"><img src="https://i.imgur.com/TpXw7Hm.png" alt="Image of a magnifying glass icon" width="150"
+            height="150"></a>
 </div>
