--- a/views/builder/index.ejs
+++ b/views/builder/index.ejs
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Encounterly - A D&D Encounter Builder</title>
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/XeR8XUQ.png" alt="Image of giant monster eye" />
 </head>
 
 <body class="background-img" style="--image-url:url(https://i.imgur.com/3d3mxdk.png)">
-    <!-- Home Page's Content -->
     <%- include('../partials/header.ejs') %>
-    <img src="https://i.imgur.com/ws1MM24.png" style="max-height:18vmin;max-width: 32vmin;margin: auto;" class="fade-in" alt="Image of text logo Encounterly and a small round creatures with tentacles and one giant eye">
-        <div class="wrapper fade-in">
+        <img src="https://i.imgur.com/ws1MM24.png" style="max-height:18vmin;max-width: 32vmin;margin: auto;"
+            class="fade-in"
+            alt="Image of text logo Encounterly and a small round creatures with tentacles and one giant eye">
+        <div class="wrapper fade-in pad-btm">
             <div class="builder-container">
                 <div class="builder-wrapper">
                     <%- include('../partials/monsters.ejs') %>
@@ -20,8 +22,6 @@
                 </div>
             </div>
         </div>
-        <%- include('../partials/footer.ejs') %>
-
+    <%- include('../partials/footer.ejs') %>
 </body>
-
 </html>
