--- a/views/partials/encounter.ejs
+++ b/views/partials/encounter.ejs
@@ -1,4 +1,5 @@
 <div id="encounter">
     <h1>Build an Encounter</h1>
-    <a href="/encounters/new"><img src="https://i.imgur.com/7RoB4Dn.png" width="150" height="150"></a>
+    <a href="/encounters/new"><img src="https://i.imgur.com/7RoB4Dn.png" alt="Image of a plus sign icon" width="150"
+            height="150"></a>
 </div>
